--- a/package.json
+++ b/package.json
@@ -5,24 +5,32 @@
   "main": "index.js",
   "scripts": {
     "dev:hot": "NODE_ENV=development   webpack-dev-server --open --hot --inline --progress --colors --watch --content-base ./",
-    "docker-dev:hot": "docker-compose -f docker-compose-dev-hot.yml up"
+    "docker:build": "docker build -t chat-dev -f Dockerfile-dev .",
+    "docker:up": "docker-compose -f docker-compose-dev-hot.yml up",
+    "docker:down": "docker-compose -f docker-compose-dev-hot.yml down"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "prop-types": "^15.7.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-redux": "^5.1.1",
-    "redux": "^3.7.2"
+    "redux": "^3.7.2",
+    "redux-saga": "^1.0.2",
+    "ws": "^6.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.0",
     "@babel/preset-env": "^7.4.2",
     "@babel/preset-react": "^7.0.0",
+    "babel-jest": "^24.5.0",
     "babel-loader": "^8.0.4",
     "css-loader": "^1.0.1",
     "cssloader": "^1.1.1",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.11.2",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.1.0",
     "morgan": "^1.9.1",
