--- a/package.json
+++ b/package.json
@@ -4,15 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev:hot": "NODE_ENV=development   webpack-dev-server --open --hot --inline --progress --colors --watch --content-base ./",
+    "dev:hot": "NODE_ENV=development nodemon ./server/server.js & webpack-dev-server --open --hot --inline --progress --colors --watch --content-base ./",
     "docker:build": "docker build -t chat-dev -f Dockerfile-dev .",
     "docker:up": "docker-compose -f docker-compose-dev-hot.yml up",
-    "docker:down": "docker-compose -f docker-compose-dev-hot.yml down"
+    "docker:down": "docker-compose -f docker-compose-dev-hot.yml down",
+    "test": "NODE_ENV=test jest --coverage"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chance": "^1.0.18",
     "prop-types": "^15.7.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
@@ -43,5 +45,17 @@
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.9",
     "webpack-hot-middleware": "^2.24.3"
+  },
+  "jest": {
+    "setupFilesAfterEnv": [
+      "<rootDir>/jest.setup.js"
+    ],
+    "testPathIgnorePatterns": [
+      "<rootDir>/node_modules/"
+    ],
+    "transform": {
+      ".*": "babel-jest",
+      "^.+\\.js?$": "babel-jest"
+    }
   }
 }
