--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev:hot": "NODE_ENV=development nodemon ./server/server.js & webpack-dev-server --open --hot --inline --progress --colors --watch --content-base ./",
+    "dev:hot": "NODE_ENV=development  webpack-dev-server --open --hot --inline --progress --colors --watch --content-base ./",
     "docker:build": "docker build -t chat-dev -f Dockerfile-dev .",
     "docker:up": "docker-compose -f docker-compose-dev-hot.yml up",
     "docker:down": "docker-compose -f docker-compose-dev-hot.yml down",
