--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev:hot": "NODE_ENV=development  webpack-dev-server --open --hot --inline --progress --colors --watch --content-base ./",
+    "dev:hot": "NODE_ENV=development nodemon server/server.js & webpack-dev-server --open --hot --inline --progress --colors --watch --content-base ./",
     "docker:build": "docker build -t chat-dev -f Dockerfile-dev .",
     "docker:up": "docker-compose -f docker-compose-dev-hot.yml up",
     "docker:down": "docker-compose -f docker-compose-dev-hot.yml down",
@@ -21,6 +21,8 @@
     "react-redux": "^5.1.1",
     "redux": "^3.7.2",
     "redux-saga": "^1.0.2",
+    "socket.io": "^2.2.0",
+    "socket.io-client": "^2.2.0",
     "ws": "^6.2.0"
   },
   "devDependencies": {
